fixed no overflow

--- a/frontend/onied/src/pages/login/login.module.css
+++ b/frontend/onied/src/pages/login/login.module.css
@@ -6,6 +6,7 @@
   gap: 1rem;
   padding: 1rem;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 .contentContainer * {
